# kotonoha-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ja.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: agent-schema-m5.md  agent-schema-m6.md  context-pack-schema-m5.md  core-console-contract-gap-phase3-draft.md  evidence-binder-design.md  full-rde-implementation-roadmap.md  full-rde-structure.html  git_operation_rules.md  github-schema-m4.md  github_projects_policy.md  human-review-decision-model.md  meta-rde-design.md  persistence.md  postgresql-schema-m1.md  postgresql-schema-m2.md  postgresql-schema-v0.md  rde-phase-d-classifier-design-gate.md  repository-governance.md  responsibility-boundary.md  spec-traceability.md  unit_testing_guidelines.md  unit_testing_guidelines_ja.md
docs/examples/: context_pack_sample.v0.1.json
migrations/: 20260510000000_v0_init.sql  20260510120000_v0_interchange_documents.sql  20260520000000_m1_semantic_lineage.sql  20260520100000_m4_github_links.sql  20260521100000_m5_agent_runs_extend.sql  20260522000000_m2_rde_meta.sql  20260522120000_m6_principals_projects.sql  README.md
src/: context_pack.rs  git.rs  human_review.rs  interchange.rs  lib.rs  lineage.rs  meta_rde.rs  observation_rde.rs  rde.rs  rde_attach.rs  rde_classifier.rs  rde_delta.rs  rde_evidence.rs  rde_impl.rs  rde_report.rs  rde_semantic.rs  semantic_lineage.rs
src/store/: agent_runs.rs  github_links.rs  mod.rs  postgres.rs  principals.rs
