[package]
name = "kotonoha_core"
version = "0.1.0"
edition = "2021"
description = "OSS core library for Kotonoha / Semantic Lineage System (SLS)"
license = "Apache-2.0"
repository = "https://github.com/zyx-corporation/kotonoha-core"
rust-version = "1.74"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
